# project-horizon

./: .env.template  .gitignore  README.md  benchmark.py  generate_eval_dataset.py  generate_train_dataset.py  pyproject.toml  summarize_projects.py  train.py  utils.py
serving/: .env.example  .env.template  README.md  docker-compose.yml
serving/api/: Dockerfile  requirements.txt
serving/api/app/: database.py  ingest.py  main.py  models.py  ray_client.py  schemas.py
serving/db/init/: 02-create-projects-table.sql
serving/monitoring/grafana/provisioning/dashboards/: ray.yml
serving/monitoring/prometheus/: prometheus.yml
serving/ray/: Dockerfile  README.md  entrypoint.sh  serve_app.py  sync_observability_assets.sh
