[project]
name = "projects-emb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bm25s>=0.3.3",
    "ollama>=0.6.1",
    "openai>=2.32.0",
    "pandas>=3.0.2",
    "sentence-transformers>=5.4.0",
    "tiktoken>=0.12.0",
    "torch>=2.7.1",
    "tqdm>=4.67.3",
    "transformers>=5.5.3",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
